--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -26,4 +26,13 @@
         android:layout_marginTop="50dp"
         android:text="@string/button2" />
 
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/button2"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="50dp"
+        android:text="@string/button3" />
+
 </RelativeLayout>
