--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/network"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -14,8 +15,9 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="42dp"
-        android:text="@string/button1" />
+        android:layout_marginTop="30dp"
+        android:text="@string/button1"
+        android:textColor="@android:color/holo_orange_light" />
 
     <Button
         android:id="@+id/button2"
@@ -23,8 +25,9 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/button1"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="42dp"
-        android:text="@string/button2" />
+        android:layout_marginTop="30dp"
+        android:text="@string/button2"
+        android:textColor="@android:color/holo_orange_light" />
 
     <Button
         android:id="@+id/button3"
@@ -32,8 +35,9 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/button2"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="42dp"
-        android:text="@string/button3" />
+        android:layout_marginTop="30dp"
+        android:text="@string/button3"
+        android:textColor="@android:color/holo_orange_light" />
 
     <Button
         android:id="@+id/button4"
@@ -41,7 +45,27 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/button3"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="42dp"
-        android:text="@string/button4" />
+        android:layout_marginTop="30dp"
+        android:text="@string/button4"
+        android:textColor="@android:color/holo_orange_light" />
+
+    <Button
+        android:id="@+id/button5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/button4"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"
+        android:text="@string/button5"
+        android:textColor="@android:color/holo_orange_light" />
+
+    <Spinner
+        android:id="@+id/spinner1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/button5"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"
+        android:background="@android:color/holo_orange_light" />
 
 </RelativeLayout>
