Add partial Javadoc. Fix crash when not on Freescale floor.

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -68,4 +68,13 @@
         android:layout_marginTop="30dp"
         android:background="@android:color/holo_orange_light" />
 
+    <Spinner
+        android:id="@+id/spinner2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/spinner1"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"
+        android:background="@android:color/holo_orange_light" />
+
 </RelativeLayout>
